# onlyfakes-api

./: LICENSE  README.md  setup.cfg  setup.py
src/onlyfakes/: __init__.py  consts.py  core.py
